--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -89,16 +89,20 @@
  a {
     text-decoration: none;
  }
- button {
+ .content-button {
     line-height: 1.18;
     letter-spacing: 0.04em;
     color: #ffffff;
     background-color: var(--primery-band);
     cursor: pointer;
  }
- button:hover,
- button:focus {
+ .content-button:hover,
+ .content-button:focus {
     background-color: #404BBF;
+ }
+ .filter-button:hover,
+ .filter-button:focus {
+   background-color: var(--primery-band);
  }
  .footer-logo,
  .footer-text {
