--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -124,6 +124,7 @@ a {
    line-height: 1.5;
    letter-spacing: 0.04em;
    color: var(--primery-band);
+   cursor: pointer;
 }
 .filter-button:hover,
 .filter-button:focus {
